# aracor-ai-assignment-yuyuLJY

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
src/config/: settings.py
src/models/: schemas.py
src/processors/: document.py
src/services/: model_manager.py  summary.py
src/utils/: my_logging.py
tests/: Integration.py  conftest.py  test_document_processor.py  test_model_manager.py  test_summary_generator.py
