[project]
name = "aracor-ai-assignment-yuyuljy"
version = "0.1.0"
description = ""
authors = [{name = "yuyuLJY", email = "jiayu1922@163.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.0",
    "langchain>=0.1.0",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "langid (>=1.1.6,<2.0.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "pypdf (>=5.3.0,<6.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"  # Testing framework
black = "^24.0"  # Code formatter
isort = "^5.10"  # Import sorter
pylint = "^3.0"  # Linter
mypy = "^1.0"  # Static type checker
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
