[metadata]
name = my_project
version = 0.1.0
description = A high-quality Python project
author = Your Name
license = MIT

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, .venv, venv, env, build, dist, migrations

[pylint]
max-line-length = 88
# disable = 
#     missing-docstring,  
#     import-error,       
#     too-few-public-methods,  
#     invalid-name,  
#     duplicate-code  
jobs = 4  
output-format = colorized
persistent = yes

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = my_project  
skip = .git, __pycache__, .venv, venv, env, build, dist

[mypy]
python_version = 3.11
ignore_missing_imports = True
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
strict_optional = True
check_untyped_defs = True

[tool:pytest]
addopts = --disable-warnings --strict-markers --tb=short
testpaths = tests
xfail_strict = True
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::UserWarning

[coverage:run]
branch = True
source = my_project  
omit =
    */tests/*
    */migrations/*
    */__init__.py
    .venv/*

[coverage:report]
fail_under = 80  
show_missing = True

[coverage:html]
directory = coverage_html_report
